fixed skip item button hidden under submit on edit item view from email ingestion of multiple items; position initial

--- a/src/Features/Form/EditItemView/EditItemView.css
+++ b/src/Features/Form/EditItemView/EditItemView.css
@@ -209,6 +209,10 @@ label.animated-checkbox button.checkbox-root {
       border-color: var(--status-error);
 }
 
+button.submit.ingestion-edit-form {
+      position: initial;
+}
+
 .close-icon {
       position: relative;
       top: 15px;
